--- a/header.tex
+++ b/header.tex
@@ -116,6 +116,7 @@
     \vspace*{3mm}
 }
 \subsectionfont{\normalfont\Large\itshape}
+\let\oldsubsubsection\subsubsection
 \renewcommand{\subsubsection}{\clearpage\oldsubsubsection}
 \makeatother
 
