--- a/header.tex
+++ b/header.tex
@@ -139,8 +139,9 @@
 {\parindent 0cm \parskip 0cm\verse}
 {\endverse}
 
-
 \fancyhead[]{}
+\fancyhead[RO]{\sc\leftmark}
+\fancyhead[LE]{\sc La CNT en la Transició }
 \renewcommand{\headrulewidth}{0pt} % treu la linia de la capçalera que afegeix fancyhdr
 \fancyfoot[CO,CE]{} % Elimina el footer que fica el pandoc al mig (Center, odd i even)
 \fancyfoot[LE,RO]{\thepage}
