smallcaps en los capitulos tambien

--- a/header.tex
+++ b/header.tex
@@ -140,7 +140,7 @@
 {\endverse}
 
 \fancyhead[]{}
-\fancyhead[RO]{\sc\leftmark}
+\fancyhead[RO]{\textsc{\nouppercase{\leftmark}}}
 \fancyhead[LE]{\sc La CNT en la Transició }
 \renewcommand{\headrulewidth}{0pt} % treu la linia de la capçalera que afegeix fancyhdr
 \fancyfoot[CO,CE]{} % Elimina el footer que fica el pandoc al mig (Center, odd i even)
