--- a/header.tex
+++ b/header.tex
@@ -141,7 +141,7 @@
 
 \fancyhead[]{}
 \fancyhead[RO]{\textsc{\nouppercase{\leftmark}}}
-\fancyhead[LE]{\sc La CNT en la Transició }
+\fancyhead[LE]{\sc La CNT en la Transición }
 \renewcommand{\headrulewidth}{0pt} % treu la linia de la capçalera que afegeix fancyhdr
 \fancyfoot[CO,CE]{} % Elimina el footer que fica el pandoc al mig (Center, odd i even)
 \fancyfoot[LE,RO]{\thepage}
