--- a/header.tex
+++ b/header.tex
@@ -121,7 +121,7 @@
 %}
 %\renewcommand{\subsubsection}{\clearpage\oldsubsubsection}
 
-\sectionfont{\clearpage\centering\color{Mahogany}\normalfont\LARGE\itshape}
+\sectionfont{\clearpage\pagestyle{plain}\centering\color{Mahogany}\normalfont\LARGE\itshape}
 \subsectionfont{\color{BlueViolet}\large}
 
 % do not hyphenate
