cambios de david

--- a/header.tex
+++ b/header.tex
@@ -146,6 +146,9 @@
 \fancyfoot[LE,RO]{\thepage}
 }
 
+\renewcommand{\sectionmark}[1]%
+{\markboth{\MakeUppercase{#1}}{}}
+
 
 \fancyhead[]{}
 \fancyhead[RO]{\textsc{\nouppercase{\leftmark}}}
@@ -153,4 +156,16 @@
 \renewcommand{\headrulewidth}{0pt} % treu la linia de la capçalera que afegeix fancyhdr
 \fancyfoot[CO,CE]{} % Elimina el footer que fica el pandoc al mig (Center, odd i even)
 \fancyfoot[LE,RO]{\thepage}
+
+% macro for fotos
+% h! significa fuerza en el sitio (here)
+% puedes poner diversos criterios ordenados por preferencia
+% t (top), b (bottom), h (here), p (page, pagina dedicada), 
+\newcommand{\fotoalancho}[2]{%
+\begin{figure}[h!]
+  \centering
+  \includegraphics[width=0.9\textwidth]{images/#1}
+  \caption{#2}
+\end{figure}
+}
 
