--- a/header.tex
+++ b/header.tex
@@ -169,3 +169,11 @@
 \end{figure}
 }
 
+
+\newcommand{\fotoalalto}[2]{%
+\begin{figure}[h!]
+  \centering
+  \includegraphics[width=0.5\textwidth]{images/#1}
+  \caption{#2}
+\end{figure}
+}
