--- a/header.tex
+++ b/header.tex
@@ -121,8 +121,10 @@
 %}
 %\renewcommand{\subsubsection}{\clearpage\oldsubsubsection}
 
-\sectionfont{\clearpage\thispagestyle{inicioCapitulo}\color{Mahogany}\normalfont\LARGE\itshape}
-\subsectionfont{\color{BlueViolet}\large}
+%\sectionfont{\clearpage\thispagestyle{inicioCapitulo}\color{Mahogany}\normalfont\LARGE\itshape}
+\sectionfont{\clearpage\thispagestyle{inicioCapitulo}\normalfont\LARGE\itshape}
+%\subsectionfont{\color{BlueViolet}\large}
+\subsectionfont{\large}
 
 % do not hyphenate
 \hyphenpenalty=50000
