--- a/header.tex
+++ b/header.tex
@@ -166,7 +166,7 @@
 \newcommand{\fotoalancho}[2]{%
 \begin{figure}[h!]
   \centering
-  \includegraphics[width=0.9\textwidth]{images/#1}
+  \includegraphics[width=0.9\textwidth]{images/#1-byn}
   \caption{#2}
 \end{figure}
 }
@@ -175,7 +175,7 @@
 \newcommand{\fotoalalto}[2]{%
 \begin{figure}[h!]
   \centering
-  \includegraphics[width=0.5\textwidth]{images/#1}
+  \includegraphics[width=0.5\textwidth]{images/#1-byn}
   \caption{#2}
 \end{figure}
 }
